// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When I instantiate an advertising main module and call the setup method a GPT slot is defined for the “bar” ad with the correct parameters 1`] = `
Array [
  "slot/ad/unit/path",
  Array [
    "fluid",
    Array [
      320,
      240,
    ],
  ],
  "div-gpt-ad-bar",
]
`;

exports[`When I instantiate an advertising main module and call the setup method a GPT slot is defined for the “foo” ad with the correct parameters 1`] = `
Array [
  "global/ad/unit/path",
  Array [
    "fluid",
    Array [
      320,
      240,
    ],
  ],
  "div-gpt-ad-foo",
]
`;

exports[`When I instantiate an advertising main module and call the setup method and I activate the “foo” ad a bid with the correct parameters is requested 1`] = `
Array [
  Array [
    Object {
      "adUnitCodes": Array [
        "div-gpt-ad-foo",
      ],
      "bidsBackHandler": [Function],
    },
  ],
]
`;

exports[`When I instantiate an advertising main module and call the setup method and I activate the “foo” ad the ad slot is refreshed 1`] = `
Array [
  Array [
    Array [
      Object {
        "addService": [Function],
        "defineSizeMapping": [Function],
        "setCollapseEmptyDiv": [Function],
        "setTargeting": [Function],
      },
    ],
  ],
]
`;

exports[`When I instantiate an advertising main module and call the setup method and I activate the “foo” ad the targeting for asynchronous GPT is set correctly 1`] = `
Array [
  Array [
    Array [
      "div-gpt-ad-foo",
    ],
  ],
]
`;

exports[`When I instantiate an advertising main module and call the setup method and call the teardown method the Prebid ad units are removed 1`] = `
Array [
  Array [
    "div-gpt-ad-foo",
  ],
  Array [
    "div-gpt-ad-bar",
  ],
]
`;

exports[`When I instantiate an advertising main module and call the setup method global GPT targeting parameters are set correctly 1`] = `
Array [
  Array [
    "eagt",
    Array [
      666,
    ],
  ],
  Array [
    "mt-ab",
    "test",
  ],
  Array [
    "mt-ma",
    Array [
      "Poserwagen",
    ],
  ],
  Array [
    "mt-mo",
    Array [
      "Brummstinko",
      "Grand Umweltverpestino",
    ],
  ],
  Array [
    "mt-thread",
    Array [
      666,
    ],
  ],
  Array [
    "mt-u2",
    Array [
      "00",
    ],
  ],
  Array [
    "mt-u4",
    true,
  ],
]
`;

exports[`When I instantiate an advertising main module and call the setup method size mappings for responsive ads are defined using GPT 1`] = `
Array [
  Array [
    Array [
      0,
      0,
    ],
    Array [],
  ],
  Array [
    Array [
      320,
      700,
    ],
    Array [
      Array [
        300,
        250,
      ],
      Array [
        320,
        50,
      ],
    ],
  ],
  Array [
    Array [
      1050,
      200,
    ],
    Array [],
  ],
]
`;

exports[`When I instantiate an advertising main module and call the setup method the GPT size mappings of the advertising module instance are correct 1`] = `
Object {
  "mobailAndTablet": Array [
    Array [
      Array [
        0,
        0,
      ],
      Array [],
    ],
    Array [
      Array [
        320,
        700,
      ],
      Array [
        Array [
          300,
          250,
        ],
        Array [
          320,
          50,
        ],
      ],
    ],
    Array [
      Array [
        1050,
        200,
      ],
      Array [],
    ],
  ],
}
`;

exports[`When I instantiate an advertising main module and call the setup method the GPT slot that is defined for the “bar” ad collapses empty divs 1`] = `
Array [
  Array [
    true,
    true,
  ],
]
`;

exports[`When I instantiate an advertising main module and call the setup method the GPT slot that is defined for the “bar” ad gets a size mapping 1`] = `
Array [
  Array [
    Array [
      Array [
        Array [
          0,
          0,
        ],
        Array [],
      ],
      Array [
        Array [
          320,
          700,
        ],
        Array [
          Array [
            300,
            250,
          ],
          Array [
            320,
            50,
          ],
        ],
      ],
      Array [
        Array [
          1050,
          200,
        ],
        Array [],
      ],
    ],
  ],
]
`;

exports[`When I instantiate an advertising main module and call the setup method the GPT slot that is defined for the “bar” ad gets the correct targeting parameters 1`] = `
Array [
  Array [
    "a",
    Array [
      11,
      666,
    ],
  ],
]
`;

exports[`When I instantiate an advertising main module and call the setup method the GPT slot that is defined for the “foo” ad gets the correct targeting parameters 1`] = `
Array [
  Array [
    "a",
    666,
  ],
]
`;

exports[`When I instantiate an advertising main module and call the setup method the ad units object added to Prebid is correct 1`] = `
Array [
  Object {
    "bids": Array [
      Object {
        "bidder": "bidder-foo",
        "params": Object {
          "foo": "bar",
        },
      },
    ],
    "code": "div-gpt-ad-foo",
    "mediaTypes": Object {
      "banner": Object {
        "sizes": Array [
          Array [
            320,
            240,
          ],
        ],
      },
    },
  },
  Object {
    "bids": Array [
      Object {
        "bidder": "bidder-bar",
        "params": Object {
          "bar": "foo",
        },
      },
    ],
    "code": "div-gpt-ad-bar",
    "mediaTypes": Object {
      "banner": Object {
        "sizes": Array [
          Array [
            320,
            240,
          ],
        ],
      },
    },
  },
]
`;

exports[`When I instantiate an advertising main module and call the setup method the slots of the advertising module instance are correct 1`] = `
Object {
  "div-gpt-ad-bar": Object {
    "addService": [Function],
    "defineSizeMapping": [Function],
    "setCollapseEmptyDiv": [Function],
    "setTargeting": [Function],
  },
  "div-gpt-ad-foo": Object {
    "addService": [Function],
    "defineSizeMapping": [Function],
    "setCollapseEmptyDiv": [Function],
    "setTargeting": [Function],
  },
}
`;

exports[`When I instantiate an advertising main module without prebid config and set config later is set to proper config 1`] = `
Object {
  "active": true,
  "customEvents": Object {
    "collapse": Object {
      "divIdPrefix": "div-gpt-ad-",
      "eventMessagePrefix": "CloseAdvContainer:",
    },
  },
  "metaData": Object {
    "usdToEurRate": 2,
  },
  "path": "global/ad/unit/path",
  "prebid": Object {
    "bidderSequence": "random",
    "bidderTimeout": 1500,
    "priceGranularity": "medium",
  },
  "sizeMappings": Object {
    "mobailAndTablet": Array [
      Object {
        "sizes": Array [],
        "viewPortSize": Array [
          0,
          0,
        ],
      },
      Object {
        "sizes": Array [
          Array [
            300,
            250,
          ],
          Array [
            320,
            50,
          ],
        ],
        "viewPortSize": Array [
          320,
          700,
        ],
      },
      Object {
        "sizes": Array [],
        "viewPortSize": Array [
          1050,
          200,
        ],
      },
    ],
  },
  "slots": Array [
    Object {
      "id": "div-gpt-ad-foo",
      "prebid": Array [
        Object {
          "bids": Array [
            Object {
              "bidder": "bidder-foo",
              "params": Object {
                "foo": "bar",
              },
            },
          ],
          "mediaTypes": Object {
            "banner": Object {
              "sizes": Array [
                Array [
                  320,
                  240,
                ],
              ],
            },
          },
        },
      ],
      "sizes": Array [
        "fluid",
        Array [
          320,
          240,
        ],
      ],
      "targeting": Object {
        "a": 666,
      },
    },
    Object {
      "collapseEmptyDiv": Array [
        true,
        true,
      ],
      "id": "div-gpt-ad-bar",
      "path": "slot/ad/unit/path",
      "prebid": Array [
        Object {
          "bids": Array [
            Object {
              "bidder": "bidder-bar",
              "params": Object {
                "bar": "foo",
              },
            },
          ],
          "mediaTypes": Object {
            "banner": Object {
              "sizes": Array [
                Array [
                  320,
                  240,
                ],
              ],
            },
          },
        },
      ],
      "sizeMappingName": "mobailAndTablet",
      "sizes": Array [
        "fluid",
        Array [
          320,
          240,
        ],
      ],
      "targeting": Object {
        "a": Array [
          11,
          666,
        ],
      },
    },
  ],
  "targeting": Object {
    "eagt": Array [
      666,
    ],
    "mt-ab": "test",
    "mt-ma": Array [
      "Poserwagen",
    ],
    "mt-mo": Array [
      "Brummstinko",
      "Grand Umweltverpestino",
    ],
    "mt-thread": Array [
      666,
    ],
    "mt-u2": Array [
      "00",
    ],
    "mt-u4": true,
  },
}
`;

exports[`When I instantiate an advertising main module without prebid config the prebid config is set to sensible defaults 1`] = `
Object {
  "metaData": Object {},
  "prebid": Object {},
  "targeting": Object {},
}
`;
